svc-nodeport-iptables.txt
---- k003 -----

# Generated by iptables-save v1.6.0 on Wed Mar 14 04:35:48 2018
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [1:60]
:POSTROUTING ACCEPT [1:60]
:DOCKER - [0:0]
:KUBE-MARK-DROP - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-POSTROUTING - [0:0]
:KUBE-SEP-AOCCJBE7RQNGFSXS - [0:0]
:KUBE-SEP-CZDMJ4CEUDGAXBQG - [0:0]
:KUBE-SEP-ES652KEXJGQ2TLCD - [0:0]
:KUBE-SEP-F7D3EGXH6GIY237U - [0:0]
:KUBE-SEP-GNF336AY35O2PZ5O - [0:0]
:KUBE-SEP-JEAMG6N6RZ3ZBSG5 - [0:0]
:KUBE-SEP-RAIYO3PA2IMCLQZS - [0:0]
:KUBE-SEP-ZT5TVM6PMFDFQAMO - [0:0]
:KUBE-SERVICES - [0:0]
:KUBE-SVC-ERIFXISQEP7F7OF4 - [0:0]
:KUBE-SVC-NPX46M4PTMTKRN6Y - [0:0]
:KUBE-SVC-SWP62QIEGFZNLQE7 - [0:0]
:KUBE-SVC-TCOU7JCQXEZGVUNU - [0:0]
:KUBE-SVC-XGLOHA7QRQ3V22RZ - [0:0]
:WEAVE - [0:0]
-A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -j WEAVE
-A DOCKER -i docker0 -j RETURN
-A KUBE-MARK-DROP -j MARK --set-xmark 0x8000/0x8000
-A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
-A KUBE-NODEPORTS -p tcp -m comment --comment "kube-system/kubernetes-dashboard:" -m tcp --dport 31737 -j KUBE-MARK-MASQ
-A KUBE-NODEPORTS -p tcp -m comment --comment "kube-system/kubernetes-dashboard:" -m tcp --dport 31737 -j KUBE-SVC-XGLOHA7QRQ3V22RZ
-A KUBE-NODEPORTS -p tcp -m comment --comment "default/svc-test-1:" -m tcp --dport 30639 -j KUBE-MARK-MASQ
-A KUBE-NODEPORTS -p tcp -m comment --comment "default/svc-test-1:" -m tcp --dport 30639 -j KUBE-SVC-SWP62QIEGFZNLQE7
-A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -m mark --mark 0x4000/0x4000 -j MASQUERADE
-A KUBE-SEP-AOCCJBE7RQNGFSXS -s 10.44.0.5/32 -m comment --comment "default/svc-test-1:" -j KUBE-MARK-MASQ
-A KUBE-SEP-AOCCJBE7RQNGFSXS -p tcp -m comment --comment "default/svc-test-1:" -m tcp -j DNAT --to-destination 10.44.0.5:8080
-A KUBE-SEP-CZDMJ4CEUDGAXBQG -s 10.36.0.7/32 -m comment --comment "default/svc-test-1:" -j KUBE-MARK-MASQ
-A KUBE-SEP-CZDMJ4CEUDGAXBQG -p tcp -m comment --comment "default/svc-test-1:" -m tcp -j DNAT --to-destination 10.36.0.7:8080
-A KUBE-SEP-ES652KEXJGQ2TLCD -s 10.32.0.4/32 -m comment --comment "kube-system/kube-dns:dns" -j KUBE-MARK-MASQ
-A KUBE-SEP-ES652KEXJGQ2TLCD -p udp -m comment --comment "kube-system/kube-dns:dns" -m udp -j DNAT --to-destination 10.32.0.4:53
-A KUBE-SEP-F7D3EGXH6GIY237U -s 10.1.0.204/32 -m comment --comment "default/kubernetes:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-F7D3EGXH6GIY237U -p tcp -m comment --comment "default/kubernetes:https" -m recent --set --name KUBE-SEP-F7D3EGXH6GIY237U --mask 255.255.255.255 --rsource -m tcp -j DNAT --to-destination 10.1.0.204:6443
-A KUBE-SEP-GNF336AY35O2PZ5O -s 10.44.0.6/32 -m comment --comment "default/svc-test-1:" -j KUBE-MARK-MASQ
-A KUBE-SEP-GNF336AY35O2PZ5O -p tcp -m comment --comment "default/svc-test-1:" -m tcp -j DNAT --to-destination 10.44.0.6:9090
-A KUBE-SEP-JEAMG6N6RZ3ZBSG5 -s 10.36.0.8/32 -m comment --comment "default/svc-test-1:" -j KUBE-MARK-MASQ
-A KUBE-SEP-JEAMG6N6RZ3ZBSG5 -p tcp -m comment --comment "default/svc-test-1:" -m tcp -j DNAT --to-destination 10.36.0.8:9090
-A KUBE-SEP-RAIYO3PA2IMCLQZS -s 10.44.0.7/32 -m comment --comment "kube-system/kubernetes-dashboard:" -j KUBE-MARK-MASQ
-A KUBE-SEP-RAIYO3PA2IMCLQZS -p tcp -m comment --comment "kube-system/kubernetes-dashboard:" -m tcp -j DNAT --to-destination 10.44.0.7:8443
-A KUBE-SEP-ZT5TVM6PMFDFQAMO -s 10.32.0.4/32 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-ZT5TVM6PMFDFQAMO -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp" -m tcp -j DNAT --to-destination 10.32.0.4:53
-A KUBE-SERVICES -d 10.110.210.181/32 -p tcp -m comment --comment "kube-system/kubernetes-dashboard: cluster IP" -m tcp --dport 443 -j KUBE-SVC-XGLOHA7QRQ3V22RZ
-A KUBE-SERVICES -d 10.96.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-NPX46M4PTMTKRN6Y
-A KUBE-SERVICES -d 10.111.246.253/32 -p tcp -m comment --comment "default/svc-test-1: cluster IP" -m tcp --dport 80 -j KUBE-SVC-SWP62QIEGFZNLQE7
-A KUBE-SERVICES -d 10.96.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-SVC-ERIFXISQEP7F7OF4
-A KUBE-SERVICES -d 10.96.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-SVC-TCOU7JCQXEZGVUNU

# 여기에 추가된 nodeport 관련된 정보가 추가됨. 
-A KUBE-SERVICES -m comment --comment "kubernetes service nodeports; NOTE: this must be the last rule in this chain" -m addrtype --dst-type LOCAL -j KUBE-NODEPORTS
-A KUBE-SVC-ERIFXISQEP7F7OF4 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-SEP-ZT5TVM6PMFDFQAMO
-A KUBE-SVC-NPX46M4PTMTKRN6Y -m comment --comment "default/kubernetes:https" -m recent --rcheck --seconds 10800 --reap --name KUBE-SEP-F7D3EGXH6GIY237U --mask 255.255.255.255 --rsource -j KUBE-SEP-F7D3EGXH6GIY237U
-A KUBE-SVC-NPX46M4PTMTKRN6Y -m comment --comment "default/kubernetes:https" -j KUBE-SEP-F7D3EGXH6GIY237U
-A KUBE-SVC-SWP62QIEGFZNLQE7 -m comment --comment "default/svc-test-1:" -m statistic --mode random --probability 0.25000000000 -j KUBE-SEP-JEAMG6N6RZ3ZBSG5
-A KUBE-SVC-SWP62QIEGFZNLQE7 -m comment --comment "default/svc-test-1:" -m statistic --mode random --probability 0.33332999982 -j KUBE-SEP-GNF336AY35O2PZ5O
-A KUBE-SVC-SWP62QIEGFZNLQE7 -m comment --comment "default/svc-test-1:" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-CZDMJ4CEUDGAXBQG
-A KUBE-SVC-SWP62QIEGFZNLQE7 -m comment --comment "default/svc-test-1:" -j KUBE-SEP-AOCCJBE7RQNGFSXS
-A KUBE-SVC-TCOU7JCQXEZGVUNU -m comment --comment "kube-system/kube-dns:dns" -j KUBE-SEP-ES652KEXJGQ2TLCD
-A KUBE-SVC-XGLOHA7QRQ3V22RZ -m comment --comment "kube-system/kubernetes-dashboard:" -j KUBE-SEP-RAIYO3PA2IMCLQZS
-A WEAVE -s 10.32.0.0/12 -d 224.0.0.0/4 -j RETURN
-A WEAVE ! -s 10.32.0.0/12 -d 10.32.0.0/12 -j MASQUERADE
-A WEAVE -s 10.32.0.0/12 ! -d 10.32.0.0/12 -j MASQUERADE
COMMIT
# Completed on Wed Mar 14 04:35:48 2018
# Generated by iptables-save v1.6.0 on Wed Mar 14 04:35:48 2018
*filter
:INPUT ACCEPT [160:41497]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [118:17440]
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]
:KUBE-FIREWALL - [0:0]
:KUBE-FORWARD - [0:0]
:KUBE-SERVICES - [0:0]
:WEAVE-NPC - [0:0]
:WEAVE-NPC-DEFAULT - [0:0]
:WEAVE-NPC-INGRESS - [0:0]
-A INPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A INPUT -j KUBE-FIREWALL
-A FORWARD -o weave -m comment --comment "NOTE: this must go before \'-j KUBE-FORWARD\'" -j WEAVE-NPC
-A FORWARD -o weave -m state --state NEW -j NFLOG --nflog-group 86
-A FORWARD -o weave -j DROP
-A FORWARD -i weave ! -o weave -j ACCEPT
-A FORWARD -o weave -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m comment --comment "kubernetes forward rules" -j KUBE-FORWARD
-A FORWARD -j DOCKER-ISOLATION
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -j KUBE-FIREWALL
-A DOCKER-ISOLATION -j RETURN
-A KUBE-FIREWALL -m comment --comment "kubernetes firewall for dropping marked packets" -m mark --mark 0x8000/0x8000 -j DROP
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding rules" -m mark --mark 0x4000/0x4000 -j ACCEPT
-A WEAVE-NPC -m state --state RELATED,ESTABLISHED -j ACCEPT
-A WEAVE-NPC -d 224.0.0.0/4 -j ACCEPT
-A WEAVE-NPC -m state --state NEW -j WEAVE-NPC-DEFAULT
-A WEAVE-NPC -m state --state NEW -j WEAVE-NPC-INGRESS
-A WEAVE-NPC -m set ! --match-set weave-local-pods dst -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-E.1.0W^NGSp]0_t5WwH/]gX@L dst -m comment --comment "DefaultAllow isolation for namespace: default" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-0EHD/vdN#O4]V?o4Tx7kS;APH dst -m comment --comment "DefaultAllow isolation for namespace: kube-public" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-?b%zl9GIe0AET1(QI^7NWe*fO dst -m comment --comment "DefaultAllow isolation for namespace: kube-system" -j ACCEPT
COMMIT
# Completed on Wed Mar 14 04:35:48 2018


---- k002 -----

# Generated by iptables-save v1.6.0 on Wed Mar 14 20:39:43 2018
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [3:180]
:POSTROUTING ACCEPT [3:180]
:DOCKER - [0:0]
:KUBE-MARK-DROP - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-POSTROUTING - [0:0]
:KUBE-SEP-AOCCJBE7RQNGFSXS - [0:0]
:KUBE-SEP-CZDMJ4CEUDGAXBQG - [0:0]
:KUBE-SEP-ES652KEXJGQ2TLCD - [0:0]
:KUBE-SEP-F7D3EGXH6GIY237U - [0:0]
:KUBE-SEP-GNF336AY35O2PZ5O - [0:0]
:KUBE-SEP-JEAMG6N6RZ3ZBSG5 - [0:0]
:KUBE-SEP-RAIYO3PA2IMCLQZS - [0:0]
:KUBE-SEP-ZT5TVM6PMFDFQAMO - [0:0]
:KUBE-SERVICES - [0:0]
:KUBE-SVC-ERIFXISQEP7F7OF4 - [0:0]
:KUBE-SVC-NPX46M4PTMTKRN6Y - [0:0]
:KUBE-SVC-SWP62QIEGFZNLQE7 - [0:0]
:KUBE-SVC-TCOU7JCQXEZGVUNU - [0:0]
:KUBE-SVC-XGLOHA7QRQ3V22RZ - [0:0]
:WEAVE - [0:0]
-A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -j WEAVE
-A DOCKER -i docker0 -j RETURN
-A KUBE-MARK-DROP -j MARK --set-xmark 0x8000/0x8000
-A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
-A KUBE-NODEPORTS -p tcp -m comment --comment "kube-system/kubernetes-dashboard:" -m tcp --dport 31737 -j KUBE-MARK-MASQ
-A KUBE-NODEPORTS -p tcp -m comment --comment "kube-system/kubernetes-dashboard:" -m tcp --dport 31737 -j KUBE-SVC-XGLOHA7QRQ3V22RZ
-A KUBE-NODEPORTS -p tcp -m comment --comment "default/svc-test-1:" -m tcp --dport 30639 -j KUBE-MARK-MASQ
-A KUBE-NODEPORTS -p tcp -m comment --comment "default/svc-test-1:" -m tcp --dport 30639 -j KUBE-SVC-SWP62QIEGFZNLQE7
-A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -m mark --mark 0x4000/0x4000-j MASQUERADE
-A KUBE-SEP-AOCCJBE7RQNGFSXS -s 10.44.0.5/32 -m comment --comment "default/svc-test-1:" -j KUBE-MARK-MASQ
-A KUBE-SEP-AOCCJBE7RQNGFSXS -p tcp -m comment --comment "default/svc-test-1:" -m tcp -j DNAT --to-destination 10.44.0.5:8080
-A KUBE-SEP-CZDMJ4CEUDGAXBQG -s 10.36.0.7/32 -m comment --comment "default/svc-test-1:" -j KUBE-MARK-MASQ
-A KUBE-SEP-CZDMJ4CEUDGAXBQG -p tcp -m comment --comment "default/svc-test-1:" -m tcp -j DNAT --to-destination 10.36.0.7:8080
-A KUBE-SEP-ES652KEXJGQ2TLCD -s 10.32.0.4/32 -m comment --comment "kube-system/kube-dns:dns" -j KUBE-MARK-MASQ
-A KUBE-SEP-ES652KEXJGQ2TLCD -p udp -m comment --comment "kube-system/kube-dns:dns" -m udp -j DNAT --to-destination 10.32.0.4:53
-A KUBE-SEP-F7D3EGXH6GIY237U -s 10.1.0.204/32 -m comment --comment "default/kubernetes:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-F7D3EGXH6GIY237U -p tcp -m comment --comment "default/kubernetes:https" -m recent --set --name KUBE-SEP-F7D3EGXH6GIY237U --mask 255.255.255.255 --rsource -m tcp -j DNAT --to-destination 10.1.0.204:6443
-A KUBE-SEP-GNF336AY35O2PZ5O -s 10.44.0.6/32 -m comment --comment "default/svc-test-1:" -j KUBE-MARK-MASQ
-A KUBE-SEP-GNF336AY35O2PZ5O -p tcp -m comment --comment "default/svc-test-1:" -m tcp -j DNAT --to-destination 10.44.0.6:9090
-A KUBE-SEP-JEAMG6N6RZ3ZBSG5 -s 10.36.0.8/32 -m comment --comment "default/svc-test-1:" -j KUBE-MARK-MASQ
-A KUBE-SEP-JEAMG6N6RZ3ZBSG5 -p tcp -m comment --comment "default/svc-test-1:" -m tcp -j DNAT --to-destination 10.36.0.8:9090
-A KUBE-SEP-RAIYO3PA2IMCLQZS -s 10.44.0.7/32 -m comment --comment "kube-system/kubernetes-dashboard:" -j KUBE-MARK-MASQ
-A KUBE-SEP-RAIYO3PA2IMCLQZS -p tcp -m comment --comment "kube-system/kubernetes-dashboard:" -m tcp -j DNAT --to-destination 10.44.0.7:8443
-A KUBE-SEP-ZT5TVM6PMFDFQAMO -s 10.32.0.4/32 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-ZT5TVM6PMFDFQAMO -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp" -m tcp -j DNAT --to-destination 10.32.0.4:53
-A KUBE-SERVICES -d 10.96.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-SVC-ERIFXISQEP7F7OF4
-A KUBE-SERVICES -d 10.110.210.181/32 -p tcp -m comment --comment "kube-system/kubernetes-dashboard: cluster IP" -m tcp --dport 443 -j KUBE-SVC-XGLOHA7QRQ3V22RZ
-A KUBE-SERVICES -d 10.96.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport443 -j KUBE-SVC-NPX46M4PTMTKRN6Y
-A KUBE-SERVICES -d 10.111.246.253/32 -p tcp -m comment --comment "default/svc-test-1: cluster IP" -m tcp --dport80 -j KUBE-SVC-SWP62QIEGFZNLQE7
-A KUBE-SERVICES -d 10.96.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-SVC-TCOU7JCQXEZGVUNU
-A KUBE-SERVICES -m comment --comment "kubernetes service nodeports; NOTE: this must be the last rule in this chain" -m addrtype --dst-type LOCAL -j KUBE-NODEPORTS
-A KUBE-SVC-ERIFXISQEP7F7OF4 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-SEP-ZT5TVM6PMFDFQAMO
-A KUBE-SVC-NPX46M4PTMTKRN6Y -m comment --comment "default/kubernetes:https" -m recent --rcheck --seconds 10800 --reap --name KUBE-SEP-F7D3EGXH6GIY237U --mask 255.255.255.255 --rsource -j KUBE-SEP-F7D3EGXH6GIY237U
-A KUBE-SVC-NPX46M4PTMTKRN6Y -m comment --comment "default/kubernetes:https" -j KUBE-SEP-F7D3EGXH6GIY237U
-A KUBE-SVC-SWP62QIEGFZNLQE7 -m comment --comment "default/svc-test-1:" -m statistic --mode random --probability 0.25000000000 -j KUBE-SEP-JEAMG6N6RZ3ZBSG5
-A KUBE-SVC-SWP62QIEGFZNLQE7 -m comment --comment "default/svc-test-1:" -m statistic --mode random --probability 0.33332999982 -j KUBE-SEP-GNF336AY35O2PZ5O
-A KUBE-SVC-SWP62QIEGFZNLQE7 -m comment --comment "default/svc-test-1:" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-CZDMJ4CEUDGAXBQG
-A KUBE-SVC-SWP62QIEGFZNLQE7 -m comment --comment "default/svc-test-1:" -j KUBE-SEP-AOCCJBE7RQNGFSXS
-A KUBE-SVC-TCOU7JCQXEZGVUNU -m comment --comment "kube-system/kube-dns:dns" -j KUBE-SEP-ES652KEXJGQ2TLCD
-A KUBE-SVC-XGLOHA7QRQ3V22RZ -m comment --comment "kube-system/kubernetes-dashboard:" -j KUBE-SEP-RAIYO3PA2IMCLQZS
-A WEAVE -s 10.32.0.0/12 -d 224.0.0.0/4 -j RETURN
-A WEAVE ! -s 10.32.0.0/12 -d 10.32.0.0/12 -j MASQUERADE
-A WEAVE -s 10.32.0.0/12 ! -d 10.32.0.0/12 -j MASQUERADE
COMMIT
# Completed on Wed Mar 14 20:39:43 2018
# Generated by iptables-save v1.6.0 on Wed Mar 14 20:39:43 2018
*filter
:INPUT ACCEPT [120:25043]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [88:10771]
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]
:KUBE-FIREWALL - [0:0]
:KUBE-FORWARD - [0:0]
:KUBE-SERVICES - [0:0]
:WEAVE-NPC - [0:0]
:WEAVE-NPC-DEFAULT - [0:0]
:WEAVE-NPC-INGRESS - [0:0]
-A INPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A INPUT -j KUBE-FIREWALL
-A FORWARD -o weave -m comment --comment "NOTE: this must go before \'-j KUBE-FORWARD\'" -j WEAVE-NPC
-A FORWARD -o weave -m state --state NEW -j NFLOG --nflog-group 86
-A FORWARD -o weave -j DROP
-A FORWARD -i weave ! -o weave -j ACCEPT
-A FORWARD -o weave -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -j KUBE-FIREWALL
-A DOCKER-ISOLATION -j RETURN
-A KUBE-FIREWALL -m comment --comment "kubernetes firewall for dropping marked packets" -m mark --mark 0x8000/0x8000 -j DROP
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding rules" -m mark --mark 0x4000/0x4000 -j ACCEPT
-A WEAVE-NPC -m state --state RELATED,ESTABLISHED -j ACCEPT
-A WEAVE-NPC -d 224.0.0.0/4 -j ACCEPT
-A WEAVE-NPC -m state --state NEW -j WEAVE-NPC-DEFAULT
-A WEAVE-NPC -m state --state NEW -j WEAVE-NPC-INGRESS
-A WEAVE-NPC -m set ! --match-set weave-local-pods dst -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-0EHD/vdN#O4]V?o4Tx7kS;APH dst -m comment --comment "DefaultAllow isolation for namespace: kube-public" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-?b%zl9GIe0AET1(QI^7NWe*fO dst -m comment --comment "DefaultAllow isolation for namespace: kube-system" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-E.1.0W^NGSp]0_t5WwH/]gX@L dst -m comment --comment "DefaultAllow isolation for namespace: default" -j ACCEPT
COMMIT
# Completed on Wed Mar 14 20:39:43 2018




----k001----
# Generated by iptables-save v1.6.0 on Wed Mar 14 20:44:15 2018
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [14:840]
:POSTROUTING ACCEPT [14:840]
:DOCKER - [0:0]
:KUBE-MARK-DROP - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-POSTROUTING - [0:0]
:KUBE-SEP-AOCCJBE7RQNGFSXS - [0:0]
:KUBE-SEP-CZDMJ4CEUDGAXBQG - [0:0]
:KUBE-SEP-ES652KEXJGQ2TLCD - [0:0]
:KUBE-SEP-F7D3EGXH6GIY237U - [0:0]
:KUBE-SEP-GNF336AY35O2PZ5O - [0:0]
:KUBE-SEP-JEAMG6N6RZ3ZBSG5 - [0:0]
:KUBE-SEP-RAIYO3PA2IMCLQZS - [0:0]
:KUBE-SEP-ZT5TVM6PMFDFQAMO - [0:0]
:KUBE-SERVICES - [0:0]
:KUBE-SVC-ERIFXISQEP7F7OF4 - [0:0]
:KUBE-SVC-NPX46M4PTMTKRN6Y - [0:0]
:KUBE-SVC-SWP62QIEGFZNLQE7 - [0:0]
:KUBE-SVC-TCOU7JCQXEZGVUNU - [0:0]
:KUBE-SVC-XGLOHA7QRQ3V22RZ - [0:0]
:WEAVE - [0:0]
-A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -j WEAVE
-A DOCKER -i docker0 -j RETURN
-A KUBE-MARK-DROP -j MARK --set-xmark 0x8000/0x8000
-A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
-A KUBE-NODEPORTS -p tcp -m comment --comment "default/svc-test-1:" -m tcp --dport 30639 -j KUBE-MARK-MASQ
-A KUBE-NODEPORTS -p tcp -m comment --comment "default/svc-test-1:" -m tcp --dport 30639 -j KUBE-SVC-SWP62QIEGFZNLQE7
-A KUBE-NODEPORTS -p tcp -m comment --comment "kube-system/kubernetes-dashboard:" -m tcp --dport 31737 -j KUBE-MARK-MASQ
-A KUBE-NODEPORTS -p tcp -m comment --comment "kube-system/kubernetes-dashboard:" -m tcp --dport 31737 -j KUBE-SVC-XGLOHA7QRQ3V22RZ
-A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -m mark --mark 0x4000/0x4000 -j MASQUERADE
-A KUBE-SEP-AOCCJBE7RQNGFSXS -s 10.44.0.5/32 -m comment --comment "default/svc-test-1:" -j KUBE-MARK-MASQ
-A KUBE-SEP-AOCCJBE7RQNGFSXS -p tcp -m comment --comment "default/svc-test-1:" -m tcp -j DNAT --to-destination 10.44.0.5:8080
-A KUBE-SEP-CZDMJ4CEUDGAXBQG -s 10.36.0.7/32 -m comment --comment "default/svc-test-1:" -j KUBE-MARK-MASQ
-A KUBE-SEP-CZDMJ4CEUDGAXBQG -p tcp -m comment --comment "default/svc-test-1:" -m tcp -j DNAT --to-destination 10.36.0.7:8080
-A KUBE-SEP-ES652KEXJGQ2TLCD -s 10.32.0.4/32 -m comment --comment "kube-system/kube-dns:dns" -j KUBE-MARK-MASQ
-A KUBE-SEP-ES652KEXJGQ2TLCD -p udp -m comment --comment "kube-system/kube-dns:dns" -m udp -j DNAT --to-destination 10.32.0.4:53
-A KUBE-SEP-F7D3EGXH6GIY237U -s 10.1.0.204/32 -m comment --comment "default/kubernetes:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-F7D3EGXH6GIY237U -p tcp -m comment --comment "default/kubernetes:https" -m recent --set --name KUBE-SEP-F7D3EGXH6GIY237U --mask 255.255.255.255 --rsource -m tcp -j DNAT --to-destination 10.1.0.204:6443
-A KUBE-SEP-GNF336AY35O2PZ5O -s 10.44.0.6/32 -m comment --comment "default/svc-test-1:" -j KUBE-MARK-MASQ
-A KUBE-SEP-GNF336AY35O2PZ5O -p tcp -m comment --comment "default/svc-test-1:" -m tcp -j DNAT --to-destination 10.44.0.6:9090
-A KUBE-SEP-JEAMG6N6RZ3ZBSG5 -s 10.36.0.8/32 -m comment --comment "default/svc-test-1:" -j KUBE-MARK-MASQ
-A KUBE-SEP-JEAMG6N6RZ3ZBSG5 -p tcp -m comment --comment "default/svc-test-1:" -m tcp -j DNAT --to-destination 10.36.0.8:9090
-A KUBE-SEP-RAIYO3PA2IMCLQZS -s 10.44.0.7/32 -m comment --comment "kube-system/kubernetes-dashboard:" -j KUBE-MARK-MASQ
-A KUBE-SEP-RAIYO3PA2IMCLQZS -p tcp -m comment --comment "kube-system/kubernetes-dashboard:" -m tcp -j DNAT --to-destination 10.44.0.7:8443
-A KUBE-SEP-ZT5TVM6PMFDFQAMO -s 10.32.0.4/32 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-ZT5TVM6PMFDFQAMO -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp" -m tcp -j DNAT --to-destination 10.32.0.4:53
-A KUBE-SERVICES -d 10.96.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-NPX46M4PTMTKRN6Y
-A KUBE-SERVICES -d 10.111.246.253/32 -p tcp -m comment --comment "default/svc-test-1: cluster IP" -m tcp --dport 80 -j KUBE-SVC-SWP62QIEGFZNLQE7
-A KUBE-SERVICES -d 10.96.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-SVC-TCOU7JCQXEZGVUNU
-A KUBE-SERVICES -d 10.96.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-SVC-ERIFXISQEP7F7OF4
-A KUBE-SERVICES -d 10.110.210.181/32 -p tcp -m comment --comment "kube-system/kubernetes-dashboard: cluster IP" -m tcp --dport 443 -j KUBE-SVC-XGLOHA7QRQ3V22RZ
-A KUBE-SERVICES -m comment --comment "kubernetes service nodeports; NOTE: this must be the last rule in this chain" -m addrtype --dst-type LOCAL -j KUBE-NODEPORTS
-A KUBE-SVC-ERIFXISQEP7F7OF4 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-SEP-ZT5TVM6PMFDFQAMO
-A KUBE-SVC-NPX46M4PTMTKRN6Y -m comment --comment "default/kubernetes:https" -m recent --rcheck --seconds 10800 --reap --name KUBE-SEP-F7D3EGXH6GIY237U --mask 255.255.255.255 --rsource -j KUBE-SEP-F7D3EGXH6GIY237U
-A KUBE-SVC-NPX46M4PTMTKRN6Y -m comment --comment "default/kubernetes:https" -j KUBE-SEP-F7D3EGXH6GIY237U
-A KUBE-SVC-SWP62QIEGFZNLQE7 -m comment --comment "default/svc-test-1:" -m statistic --mode random --probability 0.25000000000 -j KUBE-SEP-JEAMG6N6RZ3ZBSG5
-A KUBE-SVC-SWP62QIEGFZNLQE7 -m comment --comment "default/svc-test-1:" -m statistic --mode random --probability 0.33332999982 -j KUBE-SEP-GNF336AY35O2PZ5O
-A KUBE-SVC-SWP62QIEGFZNLQE7 -m comment --comment "default/svc-test-1:" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-CZDMJ4CEUDGAXBQG
-A KUBE-SVC-SWP62QIEGFZNLQE7 -m comment --comment "default/svc-test-1:" -j KUBE-SEP-AOCCJBE7RQNGFSXS
-A KUBE-SVC-TCOU7JCQXEZGVUNU -m comment --comment "kube-system/kube-dns:dns" -j KUBE-SEP-ES652KEXJGQ2TLCD
-A KUBE-SVC-XGLOHA7QRQ3V22RZ -m comment --comment "kube-system/kubernetes-dashboard:" -j KUBE-SEP-RAIYO3PA2IMCLQZS
-A WEAVE -s 10.32.0.0/12 -d 224.0.0.0/4 -j RETURN
-A WEAVE ! -s 10.32.0.0/12 -d 10.32.0.0/12 -j MASQUERADE
-A WEAVE -s 10.32.0.0/12 ! -d 10.32.0.0/12 -j MASQUERADE
COMMIT
# Completed on Wed Mar 14 20:44:15 2018
# Generated by iptables-save v1.6.0 on Wed Mar 14 20:44:15 2018
*filter
:INPUT ACCEPT [1351:330954]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [1313:363496]
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]
:KUBE-FIREWALL - [0:0]
:KUBE-FORWARD - [0:0]
:KUBE-SERVICES - [0:0]
:WEAVE-NPC - [0:0]
:WEAVE-NPC-DEFAULT - [0:0]
:WEAVE-NPC-INGRESS - [0:0]
-A INPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A INPUT -j KUBE-FIREWALL
-A FORWARD -o weave -m comment --comment "NOTE: this must go before \'-j KUBE-FORWARD\'" -j WEAVE-NPC
-A FORWARD -o weave -m state --state NEW -j NFLOG --nflog-group 86
-A FORWARD -o weave -j DROP
-A FORWARD -i weave ! -o weave -j ACCEPT
-A FORWARD -o weave -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m comment --comment "kubernetes forward rules" -j KUBE-FORWARD
-A FORWARD -j DOCKER-ISOLATION
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -j KUBE-FIREWALL
-A DOCKER-ISOLATION -j RETURN
-A KUBE-FIREWALL -m comment --comment "kubernetes firewall for dropping marked packets" -m mark --mark 0x8000/0x8000 -j DROP
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding rules" -m mark --mark 0x4000/0x4000 -j ACCEPT
-A WEAVE-NPC -m state --state RELATED,ESTABLISHED -j ACCEPT
-A WEAVE-NPC -d 224.0.0.0/4 -j ACCEPT
-A WEAVE-NPC -m state --state NEW -j WEAVE-NPC-DEFAULT
-A WEAVE-NPC -m state --state NEW -j WEAVE-NPC-INGRESS
-A WEAVE-NPC -m set ! --match-set weave-local-pods dst -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-?b%zl9GIe0AET1(QI^7NWe*fO dst -m comment --comment "DefaultAllow isolation for namespace: kube-system" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-E.1.0W^NGSp]0_t5WwH/]gX@L dst -m comment --comment "DefaultAllow isolation for namespace: default" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-0EHD/vdN#O4]V?o4Tx7kS;APH dst -m comment --comment "DefaultAllow isolation for namespace: kube-public" -j ACCEPT
COMMIT
# Completed on Wed Mar 14 20:44:15 2018
